# pyethnobiology

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
pyethnobiology/: __init__.py  indices.py  pyethnobiology.py  stats.py  visualization.py
test/data/: example2_ethnobotanydata.xlsx
tests/: test.py
tests/data/: example1_ethnobotanydata.csv  example3_ethnobotanydata.csv  example4_ethnobotanydata.xlsx
